--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <footer>
     <p class="attribution"><br><br>
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.30daysofcode.xyz" target="_blank">30DaysOfCoder</a>. 
       Coded by <a href="#">Akerele, Tosin J.</a>.
     </p>
     <div class="icons">
